# SystemMonitor

./: CMakeLists.txt  data_collector.cpp  data_collector.h  database_manager.cpp  database_manager.h  dns_collector.cpp  dns_collector.h  dns_page.cpp  dns_page.h  dns_query_info.h  draggable_chart_view.cpp  draggable_chart_view.h  main.cpp  main_window.cpp  main_window.h  network_info.cpp  network_info.h
assets/: system-monitor.desktop
